exports[`<Header /> renders correctly when it does not have a token 1`] = `
<MuiComponent>
  <MuiComponent>
    ForecastXL
  </MuiComponent>
  <LoginButton />
</MuiComponent>
`;

exports[`<Header /> renders correctly when it has a token 1`] = `
<MuiComponent>
  <MuiComponent>
    ForecastXL
  </MuiComponent>
  <UserNavigation />
</MuiComponent>
`;
